# ts_forecasting_project_dominion_energy_mw

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pull_request_template.md  ts_forecasting_test.yml
src/: app.py
src/eda/: eda_adv.ipynb  eda_initial.ipynb  future_values.csv  model.json
templates/: dataframe_template.html
tests/functional/: test_api.py
tests/unit/: test_create_plot_image.py
